easier-twoeaglesBridge/src/main/java/it/disim/univaq/sealab/ttep/val/ValParser.java
/* Generated By:JavaCC: Do not edit this line. ValParser.java */
package it.disim.univaq.sealab.ttep.val;

public class ValParser implements ValParserConstants {
  public static void main(String args []) throws ParseException
  {
    ValParser parser;
                if (args.length == 1) {
      System.out.println("Val Parser Version 1.0:  Reading from file " + args[0] + " . . .");
      try {
        parser = new ValParser(new java.io.FileInputStream(args[0]));
      }
      catch (java.io.FileNotFoundException e) {
        System.out.println("Val Parser Version 1.0:  File " + args[0] + " not found.");
        return;
      }
    }
    else {
      System.out.println("Val Parser Version 1.0:  Usage is one of:");
      System.out.println("         java ValParser < inputfile");
      System.out.println("OR");
      System.out.println("         java ValParser inputfile");
      return;
    }
    try {
      parser.ValSpec();
      System.out.println("Val Parser Version 1.0:  Ruby program parsed successfully.");
    }
    catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("Val Parser Version 1.0:  Encountered errors during parse.");
    }

  }

  final public specificheAEmilia.IdentExpr IdentExpr() throws ParseException {
        specificheAEmilia.IdentExpr ris;
        Token t;
    t = jj_consume_token(T_ID);
                ris = new specificheAEmilia.IdentExpr(t.image);
                {if (true) return ris;}
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Erecord() throws ParseException {
        specificheAEmilia.Expression ris;
        java.util.List<specificheAEmilia.Expression> list = new java.util.ArrayList<specificheAEmilia.Expression>();
        specificheAEmilia.Expression expression;
        specificheAEmilia.IdentExpr identExpr;
        Token t1;
        Token t2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_RECORD_CONS:
      jj_consume_token(T_RECORD_CONS);
      jj_consume_token(LPAREN);
      expression = E();
                                                   list.add(expression);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        expression = E();
                                                                                                     list.add(expression);
      }
      jj_consume_token(RPAREN);
                specificheAEmilia.Expression[] expressions = new specificheAEmilia.Expression[list.size()];
                for (int i = 0; i < list.size(); i++)
                        {
                        specificheAEmilia.Expression exp1 = list.get(i);
                        expressions[i] = exp1;
                        }
                specificheAEmilia.RecordCons recordCons = new specificheAEmilia.RecordCons(expressions);
                ris = recordCons;
                {if (true) return ris;}
      break;
    case T_PUT:
      jj_consume_token(T_PUT);
      jj_consume_token(LPAREN);
      t1 = jj_consume_token(T_ID);
      jj_consume_token(COMMA);
      expression = E();
      jj_consume_token(COMMA);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Put put = new specificheAEmilia.Put(t1.image,expression,identExpr);
                ris = put;
                {if (true) return ris;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Earr() throws ParseException {
        java.util.List<specificheAEmilia.Expression> list = new java.util.ArrayList<specificheAEmilia.Expression>();
        specificheAEmilia.Expression expression;
        specificheAEmilia.Expression expression2;
        specificheAEmilia.IdentExpr identExpr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_ARRAY_CONS:
      jj_consume_token(T_ARRAY_CONS);
      jj_consume_token(LPAREN);
      expression = E();
                                                  list.add(expression);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        expression = E();
                                                                                                    list.add(expression);
      }
      jj_consume_token(RPAREN);
                specificheAEmilia.Expression[] expressions = new specificheAEmilia.Expression[list.size()];
                for (int i = 0; i < list.size(); i++)
                        {
                        specificheAEmilia.Expression exp1 = list.get(i);
                        expressions[i] = exp1;
                        }
                specificheAEmilia.ArrayCons arrayCons = new specificheAEmilia.ArrayCons(expressions);
                {if (true) return arrayCons;}
      break;
    case T_WRITE:
      jj_consume_token(T_WRITE);
      jj_consume_token(LPAREN);
      expression = E();
      jj_consume_token(COMMA);
      expression2 = E();
      jj_consume_token(COMMA);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Write write = new specificheAEmilia.Write(expression,expression2,identExpr);
                {if (true) return write;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression El() throws ParseException {
        specificheAEmilia.Expression expression;
        java.util.List<specificheAEmilia.Expression> list = new java.util.ArrayList<specificheAEmilia.Expression>();
        Token t1;
        specificheAEmilia.IdentExpr identExpr;
        Token t2;
        specificheAEmilia.IdentExpr identExpr2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_LIST_CONS:
      jj_consume_token(T_LIST_CONS);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case T_GET:
      case T_READ:
      case T_FIRST:
      case T_TRUE:
      case T_FALSE:
      case T_LENGTH:
      case T_LIST_CONS:
      case T_TAIL:
      case T_CONCAT:
      case T_INSERT:
      case T_REMOVE:
      case T_ARRAY_CONS:
      case T_WRITE:
      case T_RECORD_CONS:
      case T_PUT:
      case T_ID:
      case T_NUMBER:
      case 60:
        expression = E();
                                                  list.add(expression);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          expression = E();
                                                                                                     list.add(expression);
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
                specificheAEmilia.Expression[] expressions = new specificheAEmilia.Expression[list.size()];
                for (int i = 0; i < list.size(); i++)
                        {
                        specificheAEmilia.Expression exp1 = list.get(i);
                        expressions[i] = exp1;
                        }
                specificheAEmilia.ListCons listCons = new specificheAEmilia.ListCons(expressions);
                {if (true) return listCons;}
      break;
    case T_TAIL:
      jj_consume_token(T_TAIL);
      jj_consume_token(LPAREN);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Tail tail = new specificheAEmilia.Tail(identExpr);
                {if (true) return tail;}
      break;
    case T_CONCAT:
      jj_consume_token(T_CONCAT);
      jj_consume_token(LPAREN);
      identExpr = IdentExpr();
      jj_consume_token(COMMA);
      identExpr2 = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Concat concat = new specificheAEmilia.Concat(identExpr,identExpr2);
                {if (true) return concat;}
      break;
    case T_INSERT:
      jj_consume_token(T_INSERT);
      jj_consume_token(LPAREN);
      expression = E();
      jj_consume_token(COMMA);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Insert insert = new specificheAEmilia.Insert(expression,identExpr);
                {if (true) return insert;}
      break;
    case T_REMOVE:
      jj_consume_token(T_REMOVE);
      jj_consume_token(LPAREN);
      expression = E();
      jj_consume_token(COMMA);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Remove remove = new specificheAEmilia.Remove(expression,identExpr);
                {if (true) return remove;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Eatf() throws ParseException {
        specificheAEmilia.Expression ris;
        Token t1;
        specificheAEmilia.IdentExpr identExpr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      ris = E();
      jj_consume_token(RPAREN);
                {if (true) return ris;}
      break;
    case T_ID:
      ris = IdentExpr();
                {if (true) return ris;}
      break;
    case T_NUMBER:
      t1 = jj_consume_token(T_NUMBER);
                java.text.NumberFormat numberFormat = java.text.NumberFormat.getNumberInstance();
                try
                        {
                        Number number = null;
                        try {
                                number = numberFormat.parse(t1.image);
                                }
                        catch (java.text.ParseException e)
                                {
                                {if (true) throw new ParseException(e.getMessage());}
                                }
                        if (number instanceof java.lang.Long)
                                {
                                java.lang.Long long1 = (java.lang.Long)number;
                                specificheAEmilia.Integer integer1 = new specificheAEmilia.Integer(long1.intValue());
                                {if (true) return integer1;}
                                }
                        if (number instanceof java.lang.Double)
                                {
                                java.lang.Double double1 = (java.lang.Double)number;
                                specificheAEmilia.Real real = new specificheAEmilia.Real(double1);
                                {if (true) return real;}
                                }
                        }
                catch (ParseException parseException)
                        {
                        {if (true) return null;}
                        }
      break;
    case T_LENGTH:
      jj_consume_token(T_LENGTH);
      jj_consume_token(LPAREN);
      identExpr = IdentExpr();
      jj_consume_token(RPAREN);
                specificheAEmilia.Length length = new specificheAEmilia.Length(identExpr);
                {if (true) return length;}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Eat() throws ParseException {
        specificheAEmilia.Expression e1;
        specificheAEmilia.Expression e2;
        java.util.List<specificheAEmilia.Expression> list = new java.util.ArrayList<specificheAEmilia.Expression>();
    e1 = Eatf();
                list.add(e1);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
      case 55:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        jj_consume_token(54);
        e2 = Eatf();
                specificheAEmilia.Expression exp1 = list.get(list.size() - 1);
                specificheAEmilia.Moltiplicazione moltiplicazione = new specificheAEmilia.Moltiplicazione(exp1,e2);
                list.add(moltiplicazione);
        break;
      case 55:
        jj_consume_token(55);
        e2 = Eatf();
                specificheAEmilia.Expression exp2 = list.get(list.size() - 1);
                specificheAEmilia.Divisione divisione = new specificheAEmilia.Divisione(exp2,e2);
                list.add(divisione);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                specificheAEmilia.Expression exp3 = list.get(list.size() - 1);
                {if (true) return exp3;}
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Ea() throws ParseException {
        specificheAEmilia.Expression e1;
        specificheAEmilia.Expression e2;
        java.util.List<specificheAEmilia.Expression> list = new java.util.ArrayList<specificheAEmilia.Expression>();
    e1 = Eat();
                list.add(e1);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DASH:
      case 56:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 56:
        jj_consume_token(56);
        e2 = Eat();
                specificheAEmilia.Expression exp1 = list.get(list.size() - 1);
                specificheAEmilia.Somma somma = new specificheAEmilia.Somma(exp1,e2);
                list.add(somma);
        break;
      case DASH:
        jj_consume_token(DASH);
        e2 = Eat();
                specificheAEmilia.Expression exp2 = list.get(list.size() - 1);
                specificheAEmilia.Sottrazione sottrazione = new specificheAEmilia.Sottrazione(exp2,e2);
                list.add(sottrazione);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                specificheAEmilia.Expression exp3 = list.get(list.size() - 1);
                {if (true) return exp3;}
    throw new Error("Missing return statement in function");
  }

  final public specificheAEmilia.Expression Ebt() throws ParseException {
        specificheAEmilia.Expression e1;
        specificheAEmilia.Expression e2;
        Token t1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case T_TRUE:
      t1 = jj_consume_token(T_TRUE);
                specificheAEmilia.Boolean b1 = new specificheAEmilia.Boolean(true);
                {if (true) return b1;}
      break;
    case T_FALSE:
      t1 = jj_consume_token(T_FALSE);
                specificheAEmilia.Boolean b2 = new specificheAEmilia.Boolean(false);
                {if (true) return b2;}
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_1(3)) {
        e1 = Ea();
        jj_consume_token(57);
        e2 = Ea();
                specificheAEmilia.Minore minore = new specificheAEmilia.Minore(e1,e2);
                {if (true) return minore;}
      } else if (jj_2_2(3)) {
        e1 = Ea();
        jj_consume_token(LE);
        e2 = Ea();
                specificheAEmilia.MinoreUguale minoreUguale = new specificheAEmilia.MinoreUguale(e1,e2);
                {if (true) return minoreUguale;}
      } else if (jj_2_3(3)) {
        e1 = Ea();
